fix: gap and other styles

--- a/source/vers1v2d/style/msgame.css
+++ b/source/vers1v2d/style/msgame.css
@@ -52,22 +52,6 @@ main,
   height: 100vmin;
   max-height: 100vmin;
 }
-.mini {
-  line-height: 22px;
-  font-size: 20px;
-}
-.small {
-  line-height: 20px;
-  font-size: 18px;
-}
-.medium {
-  line-height: 18px;
-  font-size: 16px;
-}
-.large {
-  line-height: 16px;
-  font-size: 14px;
-}
 .head {
   width: 91%;
   height: 8%;
@@ -180,9 +164,12 @@ main,
 }
 .label {
   text-align: center;
-  padding: 2px;
+  padding: 5px 2px;
 }
 .label:hover {
+  cursor: pointer;
+}
+.label >:hover {
   cursor: pointer;
 }
 .label.hide {
@@ -193,64 +180,61 @@ main,
   height: 91%;
   flex: 1 1 auto;
   display: grid;
-  line-height: 0.6rem;
-  font-size: 0.5rem;
+  gap: 1px;
+  line-height: 0.8rem;
+  font-size: 0.75rem;
   padding: 0;
   margin: 0;
 }
 .rows5{
   display: grid;
   grid-template-rows: repeat(5, 1fr);
-  gap: 1px 1px;
   padding: 0;
   margin: 0;
 }
 .cols5 {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  gap: 1px 1px;
+  gap: 1px;
   padding: 0;
   margin: 0;
 }
 .rows10 {
   display: grid;
   grid-template-rows: repeat(10, 1fr);
-  gap: 1px 1px;
   padding: 0;
   margin: 0;
 }
 .cols10 {
   display: grid;
   grid-template-columns: repeat(10, 1fr);
-  gap: 1px 1px;
+  gap: 1px;
   padding: 0;
   margin: 0;
 }
 .rows15 {
   display: grid;
   grid-template-rows: repeat(15, 1fr);
-  gap: 1px 1px;
   padding: 0;
   margin: 0;
 }
 .cols15 {
   display: grid;
   grid-template-columns: repeat(15, 1fr);
-  gap: 1px 1px;
+  gap: 1px;
   padding: 0;
   margin: 0;
 }
 .rows25 {
   display: grid;
   grid-template-rows: repeat(25, 1fr);
-  gap: 1px 1px;
   padding: 0;
   margin: 0;
 }
 .cols25 {
   display: grid;
   grid-template-columns: repeat(25, 1fr);
-  gap: 1px 1px;
+  gap: 1px;
   padding: 0;
   margin: 0;
 }
@@ -276,6 +260,22 @@ main,
   cursor: pointer;
   border-color: silver;
   background-color: lightgray;
+}
+.mini {
+  line-height: 22px;
+  font-size: 20px;
+}
+.small {
+  line-height: 20px;
+  font-size: 18px;
+}
+.medium {
+  line-height: 18px;
+  font-size: 16px;
+}
+.large {
+  line-height: 16px;
+  font-size: 14px;
 }
 .order1 {
   order: 1;
@@ -329,18 +329,33 @@ main,
 }
 
 @media (max-width: 2400px) {
+  html,
+  body,
+  .root {
+    line-height: 20px;
+    font-size: 18px;
+  }
+  .game {
+    line-height: 0.8rem;
+    font-size: 0.75rem;
+  }
+}
+
+@media (max-width: 1200) {
+  html,
   body,
   .root {
     line-height: 18px;
     font-size: 16px;
   }
   .game {
-    line-height: 0.6rem;
-    font-size: 0.5rem;
+    line-height: 0.75rem;
+    font-size: 0.6rem;
   }
 }
 
-@media (max-width: 1200) {
+@media (max-width: 600) {
+  html,
   body,
   .root {
     line-height: 16px;
@@ -349,21 +364,20 @@ main,
   .game {
     line-height: 0.6rem;
     font-size: 0.5rem;
+    gap: 0.5px;
   }
-}
-
-@media (max-width: 600) {
-  body,
-  .root {
-    line-height: 14px;
-    font-size: 12px;
+  .cols5,
+  .cols10,
+  .cols15,
+  .cols25 {
+    gap: 0.5px;
   }
-  .game {
-    line-height: 0.6rem;
-    font-size: 0.5rem;
+  .cells {
+    border-width: 0.5px;
   }
 }
 @media (max-width: 400) {
+  html,
   body,
   .root {
     line-height: 14px;
@@ -372,5 +386,15 @@ main,
   .game {
     line-height: 0.5rem;
     font-size: 0.4rem;
+    gap: 0.5px;
+  }
+  .cols5,
+  .cols10,
+  .cols15,
+  .cols25 {
+    gap: 0.5px;
+  }
+  .cells {
+    border-width: 0.5px;
   }
 }
